--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    if restau"
+    "    if restaurant['rating'] > "
    ]
   },
   {
