--- a/index.ipynb
+++ b/index.ipynb
@@ -155,6 +155,7 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
+    "    bette\n",
     "    if restaurant['rating'] > alternative['rating']"
    ]
   },
