Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,8 +155,9 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    bette\n",
-    "    if restaurant['rating'] > alternative['rating']"
+    "    better = None\n",
+    "    if restaurant['rating'] > alternative['rating']\n",
+    "        "
    ]
   },
   {
