--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    better = None\n",
     "    if restaurant['rating'] > alternative['rating']\n",
-    "        "
+    "        better = restai"
    ]
   },
   {
