Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,8 +157,7 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    better = None\n",
     "    if restaurant['rating'] > alternative['rating']\n",
-    "        better = restaurant[\n",
-    "        ]"
+    "        better = restaurant['name']"
    ]
   },
   {
