Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,8 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    better = None\n",
     "    if restaurant['rating'] > alternative['rating']\n",
-    "        better = restaurant['name']"
+    "        better = restaurant\n",
+    "    "
    ]
   },
   {
