--- a/index.ipynb
+++ b/index.ipynb
@@ -158,6 +158,7 @@
     "    better = None\n",
     "    if restaurant['rating'] > alternative['rating']\n",
     "        better = restaurant\n",
+    "        return restauran\n",
     "    "
    ]
   },
