Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,8 @@
     "    better = None\n",
     "    if restaurant['rating'] > alternative['rating']\n",
     "        better = restaurant\n",
-    "        return restauran\n",
+    "        return better\n",
+    "    \n",
     "    "
    ]
   },
