Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,8 @@
     "    if restaurant['rating'] > alternative['rating']\n",
     "        better = restaurant\n",
     "        return better\n",
-    "    better = \n",
+    "    better = alternative\n",
+    "    return alte\n",
     "    "
    ]
   },
