Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,7 +160,7 @@
     "        better = restaurant\n",
     "        return better\n",
     "    better = alternative\n",
-    "    return alternative\n",
+    "    return better\n",
     "    "
    ]
   },
