--- a/index.ipynb
+++ b/index.ipynb
@@ -155,10 +155,8 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    better = None\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
-    "        better = restaurant\n",
-    "        return better\n",
+    "        return re\n",
     "    better = alternative\n",
     "    return better\n",
     "    "
