--- a/index.ipynb
+++ b/index.ipynb
@@ -156,8 +156,7 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
-    "        return re\n",
-    "    better = alternative\n",
+    "        return restaurant\n",
     "    return better\n",
     "    "
    ]
