--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    is_op"
+    "    is_open = []\n",
+    "    if "
    ]
   },
   {
