--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,9 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    is_open = []\n",
-    "    if restaurants['is_closed']\n",
+    "    \n",
+    "    for \n",
+    "    \n",
     "        "
    ]
   },
