Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,8 @@
     "def open_restaurants(restaurants):\n",
     "    is_open = []\n",
     "    \n",
-    "    for rest in restaurants\n",
+    "    for rest in restaurants:\n",
+    "        \n",
     "    \n",
     "        "
    ]
