--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "    is_open = []\n",
     "    \n",
     "    for rest in restaurants:\n",
-    "        if rest['is_ closed']\n",
+    "        if not rest['is_ closed']\n",
     "    \n",
     "        "
    ]
