Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,8 @@
     "    is_open = []\n",
     "    \n",
     "    for rest in restaurants:\n",
-    "        if False rest['is_ closed']\n",
+    "        if False rest['is_ closed']:\n",
+    "            is_\n",
     "    \n",
     "        "
    ]
