Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "    \n",
     "    for rest in restaurants:\n",
     "        if False rest['is_ closed']:\n",
-    "            is_\n",
+    "            is_open.append(rest)\n",
     "    \n",
     "        "
    ]
