Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,6 +293,7 @@
     "    for rest in restaurants:\n",
     "        if False rest['is_ closed']:\n",
     "            is_open.append(rest)\n",
+    "    return\n",
     "    \n",
     "        "
    ]
