--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,8 @@
     "    is_open = []\n",
     "    \n",
     "    for rest in restaurants:\n",
-    "        if False rest['is_ closed']:\n",
+    "        \n",
+    "        if False:\n",
     "            is_open.append(rest)\n",
     "    return is_open\n",
     "    \n",
