Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
     "    is_open = []\n",
     "    \n",
     "    for rest in restaurants:\n",
-    "        \n",
+    "        rest['is_ closed']\n",
     "        if False:\n",
     "            is_open.append(rest)\n",
     "    return is_open\n",
