--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "    is_open = []\n",
     "    \n",
     "    for rest in restaurants:\n",
-    "        rest['is_ closed']\n",
+    "        rest[0]\n",
     "        if False:\n",
     "            is_open.append(rest)\n",
     "    return is_open\n",
