Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
     "    is_open = []\n",
     "    \n",
     "    for rest in restaurants:\n",
-    "        print(rest['is_closed']\n",
+    "        print(rest['is_closed'])\n",
     "        if False:\n",
     "            is_open.append(rest)\n",
     "    return is_open\n",
@@ -303,22 +303,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(open_restaurants(restaurants)) # 1\n",
+    "\n",
     "\n",
     "\n"
    ]
