Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "    \n",
     "    for rest in restaurants:\n",
     "        \n",
-    "        if False:\n",
+    "        if rest['is_closed'] = False:\n",
     "            is_open.append(rest)\n",
     "    return is_open\n",
     "\n",
