Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,25 +283,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-46-03cdcddbd391>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-03cdcddbd391>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if rest['is_closed'] = False:\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    is_open = []\n",
     "    \n",
     "    for rest in restaurants:\n",
     "        \n",
-    "        if rest['is_closed'] = False:\n",
+    "        if rest['is_closed'] == False:\n",
     "            is_open.append(rest)\n",
     "    return is_open\n",
     "\n",
@@ -312,24 +303,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "True\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
